--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <!-- Accessibility Tools (auditfähig) -->
   <script defer src="https://unpkg.com/tota11y"></script>
 
+  <script src="theme-toggle.js" defer></script>
+
   <!-- Favicon & Manifest -->
   <link rel="icon" href="favicon.svg" type="image/svg+xml" />
 </head>
