--- a/datenschutz.html
+++ b/datenschutz.html
@@ -6,6 +6,7 @@
   <meta name="robots" content="noindex" />
   <title>Datenschutzerklärung – VIRENNA</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="theme-toggle.js" defer></script>
 </head>
 <body>
   <main class="section-content" role="main">
