--- a/manifest.html
+++ b/manifest.html
@@ -6,6 +6,7 @@
   <meta name="robots" content="noindex" />
   <title>Ethik-Manifest – VIRENNA</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="theme-toggle.js" defer></script>
   <style>
     .lang-switch { display: flex; gap: 1rem; margin-bottom: 1rem; }
     .lang-switch button {
