--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="VIRENNA – Digitale Begleiterin für Menschen mit ME/CFS, POTS, Long COVID u.a. Ethisch. Werbefrei. Barrierefrei." />
   <meta name="robots" content="index, follow" />
   <title>VIRENNA – Ethische Gesundheitsassistenz</title>
+  <button id="theme-toggle" aria-label="Modus wechseln">🌙 Dunkel</button>
 
   <!-- Open Props (Design Tokens, Darkmode Ready) -->
   <link rel="stylesheet" href="https://unpkg.com/open-props" />
