--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
   <!-- 🔹 Footer mit Rechtstexten -->
   <footer role="contentinfo" class="footer">
     <nav aria-label="Rechtliches">
-      <ul>
+      <ul class="footer-nav">
         <li><a href="agb.html">AGB</a></li>
         <li><a href="datenschutz.html">Datenschutz</a></li>
         <li><a href="impressum.html">Impressum</a></li>
         <li><a href="manifest.html">Systemmanifest</a></li>
       </ul>
     </nav>
-    <p>© 2025 VIRENNA · Ethikorientierte MedTech · <span lang="en">All rights reserved.</span></p>
+    <p class="footer-bottom">© 2025 VIRENNA · Ethikorientierte MedTech · <span lang="en">All rights reserved.</span></p>
   </footer>
 </body>
 </html>
