Update index.html fixed style evtl.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>VIRENNA – Support for Complex Chronic Illness</title>
+  <!-- Normalize + Open Props (Fix for missing CSS custom properties) -->
+  <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/open-props" />
   <link rel="stylesheet" href="style.css" />
   <script src="theme-toggle.js" defer></script>
 </head>
