--- a/agb.html
+++ b/agb.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="robots" content="noindex" />
   <title>AGB – VIRENNA</title>
+  <link rel="stylesheet" href="https://unpkg.com/open-props/normalize.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/open-props" />
   <link rel="stylesheet" href="style.css" />
   <script src="theme-toggle.js" defer></script>
   <style>
